# envoy-mobile-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  benchmark.py  build.rs  leak.sh  pyproject.toml  requirements.txt  test.go  test.py  test.sh  update_wrapper.sh  wrapper.h
.github/workflows/: build.yml
envoy_requests/: __init__.py  channel.py
src/: bridge.rs  bridge_util.rs  callback_futures.rs  channel.rs  config_template.rs  engine.rs  engine_builder.rs  event.rs  futures.rs  headers.rs  lib.rs  log_level.rs  main.rs  python.rs  request_method.rs  result.rs  scheme.rs  stream.rs  sys.rs  types.rs
src/bridge/: data.rs  map.rs  mod.rs
src/futures/: mod.rs
tests/: benchmark.py  test.py
