[package]
name = "envoy-mobile-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "envoy_requests"
crate-type = ["cdylib"]

[dependencies]
futures = "*"
pyo3 = { version = "0.15.*", features = ["extension-module"] }
tokio = { version = "1.*", features = ["macros", "rt-multi-thread", "test-util"] }
url = "2.*"

[build-dependencies]
bindgen = "0.59.1"
pyo3-build-config = "0.15.1"

[dev-dependencies]
tokio-test = "*"
